avoid 0-pointer deref

BUG: 212586